# CompSci

./: Te_profile_shot17447.txt
Lab/: Lab book - Comp Sci.docx  epic1d.py  epic1d_sessions12.py  epic1d_sessions23.py  epic1d_sessions34.py  harmonic_data.txt
Lab/Session23_results/: Simsummary.txt  Simsummary_sweep_box_length.txt  Simsummary_sweep_cells.txt  Simsummary_sweep_particles.txt  run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt
Lab/Session23_results/I/: run_1.txt  run_2.txt  run_3.txt  run_4.txt  run_5.txt
Lab/Session23_results/II/: Simsummary_sweep_cells.txt  Simsummary_sweep_particles.txt
Lab/Session23_results/III/: Simsummary_sweep_box_length.txt
automation/: .gitignore  miller.py  pyproject.toml
automation/src/miller/: __init__.py
automation/src/miller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
courseworkAnal/: analysis.py
growth_sweep_results/: gamma_vs_vbeam.txt
