[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "miller"
version = "0.1.0"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.scripts]
miller = "miller:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]